# cli

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yaml  upload.yaml
src/holy_cli/: config.py  exceptions.py  log.py
src/holy_cli/cli/: __init__.py  global_commands.py  server_commands.py
src/holy_cli/cloud/: options.py
src/holy_cli/cloud/aws/: __init__.py  actions.py  base.py  iam.py  image.py  instance.py  key_pair.py  security_group.py  ssh.py  vpc.py
src/holy_cli/util/: __init__.py  hash.py  names.py  version_check.py
tests/: test_cli.py
